--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <img src="./coke (1).png" alt="">
+            <img src="coke (1).png" alt="">
         </div>
     </div>
 </body>
